<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_gamemode"
        android:title="@string/pref_gamemode"
        android:summary="@string/pref_gamemode_summ"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_track"
        android:title="@string/pref_track"
        android:summary="@string/pref_track_summ"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_notify_sidetrack"
        android:title="@string/pref_notify_sidetrack"
        android:summary="@string/pref_notify_sidetrack_summ"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_notify_close"
        android:title="@string/pref_notify_close"
        android:summary="@string/pref_notify_close_summ"
        android:defaultValue="true" />
</PreferenceScreen>